# agentic_patterns

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: constraints.txt  release.yml
notebooks/: multiagent_pattern.ipynb  planning_pattern.ipynb  poem.txt  reflection_pattern.ipynb  tool_agent_example.txt  tool_pattern.ipynb
src/: agent.py
src/agentic_patterns/: __init__.py  agent.py
src/agentic_patterns/multiagent_pattern/: agent.py  crew.py
src/agentic_patterns/planning_pattern/: react_agent.py
src/agentic_patterns/reflection_pattern/: __init__.py  reflection_agent.py  utils.py
src/agentic_patterns/tool_pattern/: tool.py  tool_agent.py  utils.py
src/agentic_patterns/utils/: completions.py  extraction.py  logging.py
