[tool.poetry]
name = "agentic-patterns"
version = "0.1.0"
description = ""
authors = ["MichaelisTrofficus <miguel.otero.pedrido.1993@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
groq = "^0.9.0"
jupyter = "^1.0.0"
python-dotenv = "^1.0.1"
colorama = "^0.4.6"
types-colorama = "^0.4.15.20240311"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
